# src/routes/content.route.js
@@ -1,9 +1,13 @@
+//imports
 import Router from 'express'
 import contentCtrl from '../controllers/content.controllers.js'
 
 const contentRoute = Router();
 
+//Rutes
 contentRoute.get('/', contentCtrl.getAll )
+
+contentRoute.get('/random', contentCtrl.getRandom)
 
 contentRoute.get('/premieres', contentCtrl.getPremieres)
 
@@ -13,8 +17,10 @@ contentRoute.get('/series', contentCtrl.getSeries)
 
 contentRoute.get('/genres', contentCtrl.getAllgenres)
 
+contentRoute.get('/genres/:genre', contentCtrl.getByGenres)
+
 contentRoute.get('/:id', contentCtrl.getById )
 
-contentRoute.get('/genres/:genre', contentCtrl.getByGenres)
+//export
 
 export default contentRoute
